force-app/main/default/objects/Pricebook2/fields/MPExternalCode__c.field-meta.xml
<CustomField>
    <fullName>MPExternalCode__c</fullName>
    <externalId>true</externalId>
    <label>Código Externo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>