force-app/main/default/objects/Pricebook2/fields/MPIsProRataMethod__c.field-meta.xml
<CustomField>
    <fullName>MPIsProRataMethod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aplica Método de Prorrateo</label>
    <type>Checkbox</type>
</CustomField>