force-app/main/default/objects/Pricebook2/fields/MPPaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>MPPaymentCondition__c</fullName>
    <label>Condición de Pago</label>
    <length>50</length>
    <type>Text</type>
</CustomField>